[package]
name = "mini_thesync"
version = "0.1.0"
edition = "2021"
authors = ["Ruggero Rebellato <ruggerorebellato@gmail.com>"]
description = "A minimal async runtime in Rust for educational purposes"
repository = "https://github.com/RuggeroRebellato/mini_thesync"
license = "MIT"

[dependencies]
crossbeam = "0.8"
num_cpus = "1.13"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[[bench]]
name = "runtime_comparison"
harness = false

[lib]
name = "mini_thesync"
path = "src/lib.rs"

[[bin]]
name = "mini_thesync"
path = "src/main.rs"
